Create authRoutes, userModel

--- a/Steps for Project.html
+++ b/Steps for Project.html
@@ -70,9 +70,23 @@ app.listen(PORT, () => {
     </p>
     <hr>
     <h1> npm i mongoose morgan </h1>
-    
+
     <hr>
     <hr>
+
+    <h1>model and hashing password Ecommerce Mern app</h1>
+    <pre>
+        models   controllers  middlewares 
+client
+config
+controllers
+helpers
+middlewares
+models
+routes
+
+
+    </pre>
     <hr>
     <hr>
     <hr>
